code/force-app/main/default/objects/Account_Private_Info__c/Account_Private_Info__c.object-meta.xml
<CustomObject>
    <label>客戶非公開資訊</label>
    <nameField>
        <label>客戶非公開資訊</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>