code/force-app/main/default/objects/Account_Private_Info__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>客戶非公開資訊</relationshipLabel>
    <relationshipName>Account_Private_Info</relationshipName>
    <type>Lookup</type>
</CustomField>