code/force-app/main/default/objects/Account_Private_Info__c/fields/Account_Private_Info_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Info_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>客戶非公開資訊外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>