code/force-app/main/default/objects/Account_Private_Info__c/fields/Last_Business_Day_Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Last_Business_Day_Deposit_Balance__c</fullName>
    <label>前一營業日存款餘額</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>