code/force-app/main/default/objects/Account_Private_Info__c/fields/Last_Business_Day_Import__c.field-meta.xml
<CustomField>
    <fullName>Last_Business_Day_Import__c</fullName>
    <label>前一營業日進口實績</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>