code/force-app/main/default/objects/Account_Private_Info__c/fields/Recent_Y_Total_TF_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Recent_Y_Total_TF_Contribution__c</fullName>
    <label>近一年貿融貢獻度總和</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>