code/force-app/main/default/objects/Account_Private_Info__c/fields/Total_Loan_Facility_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Facility_Balance__c</fullName>
    <label>總放款餘額</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>