code/force-app/main/default/objects/Account_Private_Info__c/fields/Total_Trade_Finance_Facility__c.field-meta.xml
<CustomField>
    <fullName>Total_Trade_Finance_Facility__c</fullName>
    <label>總貿融額度</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>