code/force-app/main/default/objects/Account_Private_Info__c/fields/TotalLiab_RelPerAcc__c.field-meta.xml
<CustomField>
    <fullName>TotalLiab_RelPerAcc__c</fullName>
    <label>個人關聯戶彙總各角色總負債</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>