code/force-app/main/default/objects/Account_Private_Info__c/fields/VIP_Level__c.field-meta.xml
<CustomField>
    <fullName>VIP_Level__c</fullName>
    <label>VIP級別</label>
    <length>4</length>
    <type>Text</type>
</CustomField>