code/force-app/main/default/objects/Account_Private_Info__c/fields/WM_RM__c.field-meta.xml
<CustomField>
    <fullName>WM_RM__c</fullName>
    <label>分行理專</label>
    <length>30</length>
    <type>Text</type>
</CustomField>